[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prefabs/PlayerCollisionShape2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/PlayerSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/PlayerBoostSound.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/PlayerExplosionSound.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/PlayerHurtSound.wav" type="AudioStream" id=8]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
physics_interpolation_mode = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="." instance=ExtResource( 1 )]

[node name="Listener2D" type="Listener2D" parent="."]
current = true

[node name="AudioStream2DBoost" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "GameSounds"

[node name="AudioStream2DHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
bus = "GameSounds"

[node name="AudioStream2DExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "GameSounds"

[node name="CooldownTimerSalve" type="Timer" parent="."]

[node name="KnockbackTimer" type="Timer" parent="."]

[node name="CooldownHurtTimer" type="Timer" parent="."]
wait_time = 0.1
